--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   </style>
 </head>
 <body>
-  <h1>¡Hola, mundo!</h1>
-  <p>Esta es mi primera página web.</p>
-  <a href="https://vercel.com" target="_blank">Visitar Vercel</a>
+  <h1>Proyecto Análisis Lol</h1>
+  <p>AzE_esports en mi kokoro.</p>
 </body>
 </html>
