--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div id="tabla"></div>
 
   <script>
-    fetch("https://TU-URL-DE-RENDER.onrender.com/data") // reemplaza esta URL
+    fetch("https://aze-esports-1.onrender.com") // reemplaza esta URL
       .then(res => res.json())
       .then(data => {
         const div = document.getElementById("tabla");
